force-app/main/default/objects/Site_Readiness__c/Site_Readiness__c.object-meta.xml
<CustomObject>
    <label>Site Readiness</label>
    <nameField>
        <displayFormat>SR{0}-{DD}-{MM}-{YY}</displayFormat>
        <label>Site Readiness Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Readiness Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>