force-app/main/default/objects/Site_Readiness__c/fields/Accommodate_a_5_Cord__c.field-meta.xml
<CustomField>
    <fullName>Accommodate_a_5_Cord__c</fullName>
    <inlineHelpText>The outlet must accept a cord length of 5’; advanced notice is required when longer cords (6 feet) are needed.</inlineHelpText>
    <label>Accommodate a 5&#39; Cord?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>