force-app/main/default/objects/Site_Readiness__c/fields/Actual_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Schedule_Date__c</fullName>
    <label>Actual Schedule Date</label>
    <type>DateTime</type>
</CustomField>