force-app/main/default/objects/Site_Readiness__c/fields/Angle_Stop_and_Shut_Off_Available__c.field-meta.xml
<CustomField>
    <fullName>Angle_Stop_and_Shut_Off_Available__c</fullName>
    <inlineHelpText>There must be an angle stop with a water shut off in place.</inlineHelpText>
    <label>Angle Stop and Shut Off Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>