force-app/main/default/objects/Site_Readiness__c/fields/Any_Appliances_Require_Hard_Wiring__c.field-meta.xml
<CustomField>
    <fullName>Any_Appliances_Require_Hard_Wiring__c</fullName>
    <inlineHelpText>Sears provides pigtail installation only, and any appliances requiring hard-wiring must be specified in advance (with final electrical hook up by an electrician).</inlineHelpText>
    <label>Any Appliances Require Hard-Wiring?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>