force-app/main/default/objects/Site_Readiness__c/fields/Cabinet_Spacing_the_Proper_Size__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Spacing_the_Proper_Size__c</fullName>
    <inlineHelpText>Cabinet space must be wide enough, deep enough, and long enough to accommodate appliances (if the delivery team is installing appliances).</inlineHelpText>
    <label>Cabinet Spacing the Proper Size?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Installing_Appliances__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>