force-app/main/default/objects/Site_Readiness__c/fields/Cabinets_Flush_on_the_Bottom__c.field-meta.xml
<CustomField>
    <fullName>Cabinets_Flush_on_the_Bottom__c</fullName>
    <inlineHelpText>The cabinets must be flush on bottom or have appropriate blocking (3” flush board on both sides of the cabinet opening and all the way back).</inlineHelpText>
    <label>Cabinets Flush on the Bottom?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>