force-app/main/default/objects/Site_Readiness__c/fields/clear_path_to_deliver_and_secure_applian__c.field-meta.xml
<CustomField>
    <fullName>clear_path_to_deliver_and_secure_applian__c</fullName>
    <inlineHelpText>The area must have a clear path to deliver and secure appliances.</inlineHelpText>
    <label>Path to Deliver and Secure Appliances?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>