force-app/main/default/objects/Site_Readiness__c/fields/Complete_Hood_Section__c.field-meta.xml
<CustomField>
    <fullName>Complete_Hood_Section__c</fullName>
    <formula>IF(
  OR( Delivery_Schedule__r.Delivery_Includes_MHC__c , 
  Delivery_Schedule__r.Delivery_Includes_Range_Hoods__c) ,
  IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;, 15, 35),
  IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;, 15, 35)
)</formula>
    <inlineHelpText>Complete Hood Section?</inlineHelpText>
    <label>Section Indicator</label>
    <type>Text</type>
</CustomField>