force-app/main/default/objects/Site_Readiness__c/fields/Complete_Refrigeration_Section__c.field-meta.xml
<CustomField>
    <fullName>Complete_Refrigeration_Section__c</fullName>
    <formula>IF(
  Delivery_Schedule__r.Delivery_Includes_Refrigeration__c ,
  IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;green&quot;, 15, 35),
  IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;red&quot;, 15, 35)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Complete Refrigeration Section?</inlineHelpText>
    <label>Section Indicator</label>
    <type>Text</type>
</CustomField>