force-app/main/default/objects/Site_Readiness__c/fields/Construction_Project__c.field-meta.xml
<CustomField>
    <fullName>Construction_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Project</label>
    <referenceTo>Construction_Project__c</referenceTo>
    <relationshipLabel>Site Readiness Reports</relationshipLabel>
    <relationshipName>Site_Readiness_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>