force-app/main/default/objects/Site_Readiness__c/fields/Delivery_Above_the_4th_Floor__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Above_the_4th_Floor__c</fullName>
    <label>Delivery Above the 4th Floor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>