force-app/main/default/objects/Site_Readiness__c/fields/Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Schedule</label>
    <referenceTo>Delivery_Schedule__c</referenceTo>
    <relationshipLabel>Site Readiness Reports</relationshipLabel>
    <relationshipName>Site_Readiness_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>