force-app/main/default/objects/Site_Readiness__c/fields/Does_Gas_Stub_Out_Meet_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Does_Gas_Stub_Out_Meet_Specifications__c</fullName>
    <inlineHelpText>Gas stub-out should be properly located and protrude from wall approximately 1 inch with the shut off at that location.</inlineHelpText>
    <label>Does Gas Stub-Out Meet Specifications?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>