force-app/main/default/objects/Site_Readiness__c/fields/Drain_pans_Used__c.field-meta.xml
<CustomField>
    <fullName>Drain_pans_Used__c</fullName>
    <inlineHelpText>Drain pans, if used, must be a minimum of 4 inches from the rear wall.</inlineHelpText>
    <label>Drain Pans Used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>