force-app/main/default/objects/Site_Readiness__c/fields/Drain_w_o_Cover_Available__c.field-meta.xml
<CustomField>
    <fullName>Drain_w_o_Cover_Available__c</fullName>
    <inlineHelpText>The drain must be available for installation with the cover removed.</inlineHelpText>
    <label>Drain w/o Cover Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>