force-app/main/default/objects/Site_Readiness__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Date the Site Readiness must be Scheduled by</inlineHelpText>
    <label>Scheduled by Due Date</label>
    <type>Date</type>
</CustomField>