force-app/main/default/objects/Site_Readiness__c/fields/Elevator_or_Lift_Available__c.field-meta.xml
<CustomField>
    <fullName>Elevator_or_Lift_Available__c</fullName>
    <label>Elevator or Lift Available?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Delivery_Above_the_4th_Floor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>