force-app/main/default/objects/Site_Readiness__c/fields/Floor_Leveled__c.field-meta.xml
<CustomField>
    <fullName>Floor_Leveled__c</fullName>
    <label>Floor Leveled?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>