force-app/main/default/objects/Site_Readiness__c/fields/Free_of_Mud__c.field-meta.xml
<CustomField>
    <fullName>Free_of_Mud__c</fullName>
    <label>Free of Mud?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>