force-app/main/default/objects/Site_Readiness__c/fields/Hole_for_Electric_Predrilled__c.field-meta.xml
<CustomField>
    <fullName>Hole_for_Electric_Predrilled__c</fullName>
    <inlineHelpText>Two 1-½” holes must be predrilled for the electrical cord. The placement must be exact for a flush-mount installation (see specification sheets).</inlineHelpText>
    <label>Hole for Electric Predrilled?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>