force-app/main/default/objects/Site_Readiness__c/fields/Installing_Appliances__c.field-meta.xml
<CustomField>
    <fullName>Installing_Appliances__c</fullName>
    <label>Installing Appliances?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>