force-app/main/default/objects/Site_Readiness__c/fields/Installing_Waterline_and_or_Ice_Maker__c.field-meta.xml
<CustomField>
    <fullName>Installing_Waterline_and_or_Ice_Maker__c</fullName>
    <inlineHelpText>The shut-off valve must be located at the point of connection, if installing the waterline to the ice maker behind or alongside of the refrigerator.</inlineHelpText>
    <label>Installing Waterline and/or Ice Maker?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>