force-app/main/default/objects/Site_Readiness__c/fields/Is_Sidewalk_Clear__c.field-meta.xml
<CustomField>
    <fullName>Is_Sidewalk_Clear__c</fullName>
    <label>Is Sidewalk Clear?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>