force-app/main/default/objects/Site_Readiness__c/fields/Operable_Gas_Shutoff_or_Outlet_Available__c.field-meta.xml
<CustomField>
    <fullName>Operable_Gas_Shutoff_or_Outlet_Available__c</fullName>
    <inlineHelpText>There must be an operable gas shut off valve or electrical outlet to allow for a proper hook up.</inlineHelpText>
    <label>Operable Gas Shutoff or Outlet Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>