force-app/main/default/objects/Site_Readiness__c/fields/Outlet_in_Cabinet_Above_Mount_Location__c.field-meta.xml
<CustomField>
    <fullName>Outlet_in_Cabinet_Above_Mount_Location__c</fullName>
    <inlineHelpText>The outlet must be in the cabinet directly above MHC and no higher than 6” from the bottom of the cabinet to accommodate the cord. No extension cords are permitted.</inlineHelpText>
    <label>Outlet in Cabinet Above Mount Location?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>