force-app/main/default/objects/Site_Readiness__c/fields/Outlet_in_Specified_Position__c.field-meta.xml
<CustomField>
    <fullName>Outlet_in_Specified_Position__c</fullName>
    <inlineHelpText>The outlet must be located in the position provided by the product specifications.</inlineHelpText>
    <label>Outlet in Specified Position?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>