force-app/main/default/objects/Site_Readiness__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <formula>IF(NOt(ISBLANK(Owner:Queue.QueueName)), Owner:Queue.QueueName,  Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>