force-app/main/default/objects/Site_Readiness__c/fields/Predrilled_Hole_for_Flush_Mount__c.field-meta.xml
<CustomField>
    <fullName>Predrilled_Hole_for_Flush_Mount__c</fullName>
    <inlineHelpText>One ½” holes must be predrilled for electrical cord. The placement must be exact for flush-mount installation (see spec sheets).</inlineHelpText>
    <label>Predrilled Hole for Flush Mount?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>