force-app/main/default/objects/Site_Readiness__c/fields/Prerequisites_Installed_and_Painted__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites_Installed_and_Painted__c</fullName>
    <inlineHelpText>Countertops, cabinets, flooring, and trim must be installed and painted (if the delivery team is installing appliances).</inlineHelpText>
    <label>Prerequisites Installed and Painted?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Installing_Appliances__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>