force-app/main/default/objects/Site_Readiness__c/fields/Required_Vent_Location__c.field-meta.xml
<CustomField>
    <fullName>Required_Vent_Location__c</fullName>
    <inlineHelpText>The vent location needs to be within 5 feet of the dryer vent outlet.</inlineHelpText>
    <label>Required Vent Location?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>