force-app/main/default/objects/Site_Readiness__c/fields/Safe_Adjacent_and_Legal_Parking__c.field-meta.xml
<CustomField>
    <fullName>Safe_Adjacent_and_Legal_Parking__c</fullName>
    <inlineHelpText>Safe, adjacent, and legal parking with clear access to delivery point(s) is required for the trucks to gain safe entry to the site.</inlineHelpText>
    <label>Safe, Adjacent, and Legal Parking?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>