force-app/main/default/objects/Site_Readiness__c/fields/Shut_off_Valve_at_Point_of_Connection__c.field-meta.xml
<CustomField>
    <fullName>Shut_off_Valve_at_Point_of_Connection__c</fullName>
    <inlineHelpText>The shut-off valve must be located at the point of connection, if installing the waterline to the ice maker behind or alongside of the refrigerator.</inlineHelpText>
    <label>Shut-off Valve at Point of Connection?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Installing_Waterline_and_or_Ice_Maker__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>