force-app/main/default/objects/Site_Readiness__c/fields/Side_Mount_Brackets_Available__c.field-meta.xml
<CustomField>
    <fullName>Side_Mount_Brackets_Available__c</fullName>
    <inlineHelpText>Side mount brackets are required for natural stone countertops.</inlineHelpText>
    <label>Side Mount Brackets Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>