force-app/main/default/objects/Site_Readiness__c/fields/Smooth_Hard_Surface_Leading_to_Unit__c.field-meta.xml
<CustomField>
    <fullName>Smooth_Hard_Surface_Leading_to_Unit__c</fullName>
    <label>Smooth Hard Surface Leading to Units?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>