force-app/main/default/objects/Site_Readiness__c/fields/Stairs_and_Stairwell_have_Railings__c.field-meta.xml
<CustomField>
    <fullName>Stairs_and_Stairwell_have_Railings__c</fullName>
    <label>Stairs and Stairwell have Railings?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>