force-app/main/default/objects/Site_Readiness__c/fields/Stone_Countertops__c.field-meta.xml
<CustomField>
    <fullName>Stone_Countertops__c</fullName>
    <label>Stone Countertops?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>