force-app/main/default/objects/Site_Readiness__c/fields/Streets_Clear_for_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Streets_Clear_for_Delivery__c</fullName>
    <inlineHelpText>The streets must be clear and accessible for trucks (minimum: 26&#39; long; 13&#39;6&quot; high) to drive through.</inlineHelpText>
    <label>Streets Clear for Delivery?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>