force-app/main/default/objects/Site_Readiness__c/fields/Utilities_Available__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Available__c</fullName>
    <inlineHelpText>Water, gas, and electricity must be turned on to enable proper testing of appliances (if the delivery team is installing appliances).</inlineHelpText>
    <label>Utilities Available?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Installing_Appliances__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>