force-app/main/default/objects/Site_Readiness__c/fields/X50_Amp_Receptacle_Available__c.field-meta.xml
<CustomField>
    <fullName>X50_Amp_Receptacle_Available__c</fullName>
    <inlineHelpText>The connection must be made to a 50 amp receptacle.</inlineHelpText>
    <label>50 Amp Receptacle Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>