force-app/main/default/objects/Site_Readiness__c/validationRules/Scheduled_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheduled_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c, &quot;Scheduled&quot;),
ISBLANK( Actual_Schedule_Date__c ))</errorConditionFormula>
    <errorDisplayField>Actual_Schedule_Date__c</errorDisplayField>
    <errorMessage>You must enter the date/time the Site readiness has been scheduled for.</errorMessage>
</ValidationRule>