force-app/main/default/objects/Site_Readiness__c/listViews/Scheduled_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Scheduled_Site_Visits</fullName>
    <columns>Actual_Schedule_Date__c</columns>
    <columns>NAME</columns>
    <columns>Construction_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actual_Schedule_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Scheduled Site Visits</label>
    <language>en_US</language>
</ListView>