force-app/main/default/objects/Site_Readiness__c/listViews/Sites_Pending_to_be_Scheduled.listView-meta.xml
<ListView>
    <fullName>Sites_Pending_to_be_Scheduled</fullName>
    <columns>Due_Date__c</columns>
    <columns>NAME</columns>
    <columns>Construction_Project__c</columns>
    <columns>Actual_Schedule_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actual_Schedule_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Sites Pending to be Scheduled</label>
    <language>en_US</language>
</ListView>